receiver/force-app/main/receiver/objects/Organization_version__c/Organization_version__c.object-meta.xml
<CustomObject>
    <label>Organization version</label>
    <nameField>
        <label>Organization version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>