receiver/force-app/main/receiver/objects/Organization_version__c/fields/Installed_organization__c.field-meta.xml
<CustomField>
    <fullName>Installed_organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organization from which data is going to be extracted</description>
    <inlineHelpText>Organization from which data is going to be extracted</inlineHelpText>
    <label>Installed organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Organization versions</relationshipLabel>
    <relationshipName>Organization_versions</relationshipName>
    <type>Lookup</type>
</CustomField>