receiver/force-app/main/receiver/objects/Organization_version__c/fields/Latest__c.field-meta.xml
<CustomField>
    <fullName>Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes if the package version installed on the org is the lastest installed version</description>
    <inlineHelpText>Describes if the package version installed on the org is the lastest installed version</inlineHelpText>
    <label>Latest installed</label>
    <type>Checkbox</type>
</CustomField>