receiver/force-app/main/receiver/objects/Organization_version__c/fields/Newest_package_version__c.field-meta.xml
<CustomField>
    <fullName>Newest_package_version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Newest package version</label>
    <referenceTo>Package_version__c</referenceTo>
    <relationshipLabel>Newest package version</relationshipLabel>
    <relationshipName>Newest_package_version</relationshipName>
    <type>Lookup</type>
</CustomField>