receiver/force-app/main/receiver/objects/Organization_version__c/fields/Package_version__c.field-meta.xml
<CustomField>
    <fullName>Package_version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Object that represents a version of a package</description>
    <inlineHelpText>Object that represents a version of a package</inlineHelpText>
    <label>Package version</label>
    <referenceTo>Package_version__c</referenceTo>
    <relationshipLabel>Organization versions</relationshipLabel>
    <relationshipName>Organization_versions</relationshipName>
    <type>Lookup</type>
</CustomField>