receiver/force-app/main/receiver/objects/Organization_version__c/fields/Version_differences__c.field-meta.xml
<CustomField>
    <fullName>Version_differences__c</fullName>
    <label>Version differences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>