receiver/force-app/main/receiver/objects/Organization_version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Installed_organization__c</columns>
    <columns>Package_version__c</columns>
    <columns>Newest_package_version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All organization versions</label>
</ListView>